force-app/main/default/objects/OrderItem/fields/AssociatedToProductLine__c.field-meta.xml
<CustomField>
    <fullName>AssociatedToProductLine__c</fullName>
    <description>This field is used to associate misc charges with corresponding product line</description>
    <label>AssociatedToProductLine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>