force-app/main/default/objects/OrderItem/fields/Configuration_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>stores inventory item used to configure this part</description>
    <inlineHelpText>stores inventory item used to configure this part</inlineHelpText>
    <label>Configuration Inventory</label>
    <referenceTo>PortalInventoryDetail__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>