force-app/main/default/objects/OrderItem/fields/VIN_Number__c.field-meta.xml
<CustomField>
    <fullName>VIN_Number__c</fullName>
    <description>BC-351 VIN Number of configured part e.g. WAV via webconfigurator</description>
    <inlineHelpText>BC-351 VIN Number of configured part e.g. WAV via webconfigurator</inlineHelpText>
    <label>VIN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>